--- a/SmartList/app/src/main/res/layout/fragment_ver_lista.xml
+++ b/SmartList/app/src/main/res/layout/fragment_ver_lista.xml
@@ -4,16 +4,6 @@
     android:layout_height="match_parent"
     tools:context="com.smartdays.smartlist.VerListaFragment">
 
-    <TextView
-        android:text="@string/txtListasSalvas"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true"
-        android:id="@+id/txtListasSalvas"
-        android:textSize="18sp"
-        android:layout_alignParentLeft="true" />
-
     <ListView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -22,5 +12,16 @@
         android:layout_marginTop="26dp"
         android:id="@+id/ltwListasSalvas"
         android:layout_alignParentLeft="true" />
+
+    <TextView
+        android:text="@string/txtListasSalvas"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/txtListasSalvas"
+        android:textSize="18sp"
+        android:layout_marginTop="84dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
 </RelativeLayout>
